--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
                 <use href="./images/symbol-defs.svg#icon-close-1"></use>
               </svg>
             </button>
+
+            <form>
+              <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+
+              <label for="modal-input-email">Email</label>
+              <input type="text" id="modal-input-email">
+
+            </form>
+
+
           </div>
         </div>
       </section>
