--- a/portfolio.html
+++ b/portfolio.html
@@ -269,6 +269,19 @@
             </li>
           </ul>
         </div>
+
+        <form class="form-footer conteiner">
+          <label for="input-submit"><span class="title-input-footer">Підпишіться на розсилку</span></label>
+          <div class="submit-form">
+          <input type="email" class="input-footer" id='input-submit' placeholder="E-mail">
+          <button type="submit" class="button-form-footer">
+            <span class="name-button-footer">Підписатися</span>
+            <svg width="24" height="24" class="icon-input">
+              <use href="./images/symbol-defs.svg#icon-send"></use>
+            </svg>
+          </button>
+        </div>
+        </form>
       </div>
       
     </footer>
